1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Value2dDisplay.m ([Value -setDisplayWidget:Colormap:]): 
	First argument is now id <Raster> instead of Raster*, second
	is id <Colormap> instead of XColormap*.
	Reformatting throughout.

	* Value2dDisplay.h (Value2dDisplay): Make displayWidget conform
	to the Raster protocol instead of being statically typed. 
	Make colormap conform to the Colormap protocol instead of being
	statically typed to XColormap.  setDisplayWidget now takes an
	id <Raster> instead of a Raster*.

	* Object2dDisplay.m: Include gui.h instead of tkobjc/control.h.
	([Object -setDisplayWidget:]): Takes an id <Raster> instead of Raster*.
	([Object -makeProbeAtX:Y:]): Use GUI_BEEP instead of tkobjc_ringBell.

	* Object2dDisplay.h: Include gui.h instead of tkobjc.h.
	(Object2dDisplay): Declare displayWidget as id <Raster>.
	Make setDisplayWidget take an id <Raster> instead of Raster*.

	* Int2dFiler.h: Don't include tkobjc.h.

1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Object2dDisplay.m ([Object -makeProbeAtX:Y:]): Use
	CREATE_PROBE_DISPLAY instead of calling createProbeDisplayFor
	method.

1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Discrete2d.h: Constify toFile argument to setDiscrete2d.
	Reformatting throughout.
	
	* Discrete2d.m ([Discrete2d -setDiscrete2d: toFile]): Constify
	toFile argument.  Reformatting throughout.

1997-12-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Int2dFiler.m ([Int -fileTo:aFileName]): Constify argument.
	Reformatting throughout.

	* Int2dFiler.h: Constify argument to fileTo.
	Reformatting throughout.

1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Object2dDisplay.m: Include tkobjc/control.h.
	([Object -makeProbeAtX:Y:]):  Use new wrapper function tkobjc_ringBell.

Mon Dec  8 22:40:48 1997  glen e. p. ropella  <gepr@swarm.com>

	* Int2dFiler.h, Object2dDisplay.h, Discrete2d.h: replaced 
	all instances of swarmobject.h with objectbase.h and 