@@ -1,3 +1,9 @@
+1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Value2dDisplay.h: Rename Colormap: key to colormap:.
+	* Value2dDisplay.m ([Value -setDisplayWidget:colormap:]): Likewise.
+	Include gui.h.
+
 1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Value2dDisplay.m ([Value -setDisplayWidget:Colormap:]): 
